opacity and extra spacing in animation fixed

--- a/lees-portfolio/src/components/AnimatedLetters/index.scss
+++ b/lees-portfolio/src/components/AnimatedLetters/index.scss
@@ -3,7 +3,7 @@
     opacity: 0;
     animation: bounceIn 1s 1s;
     animation-fill-mode: forwards;
-    min-width: 10px;
+    // min-width: 7px;
 }
 
 @for $i from 1 through 35 {
@@ -14,7 +14,7 @@
 
 
 .text-animate-hover {
-    min-width: 10px;
+    min-width: 5px;
     display: inline-block;
     animation-fill-mode: both;
 
